# my_python_projects

./: .gitignore  CHANGELOG.md  README.md  changelog.md
Algorithms/Caesar_Cipher/src/: caesar_cipher.py
Algorithms/Terrain_Generator/src/: Terrain Generator.py
CLI_Games/Adopt_Pet/: Adopt_Pet.py
CLI_Games/CLI_Fight_Game/: CLI_Fight_Game.py
CLI_Games/CLI_GuessNo/: CLI_GuessNo.py
CLI_Games/Kingdom/: Kingdom.py
CLI_Games/card_engine/: .gitignore  LICENSE  README.md  pyproject.toml
CLI_Games/card_engine/src/card_engine/: __init__.py  __init__.pyi  main.py  main.pyi
CLI_Games/card_engine/src/utils/: caesar_cipher.py  caesar_cipher.pyi
CLI_Games/card_engine/tests/: conftest.py  test_card.py  test_deck.py  test_hand.py
Random_Programs/French Speaker/: French_Speaker_GUI.py
Random_Programs/Learning/: README.md  csv_reader.py  json_learning.json  json_learning.py  opensky.py  requests_learn.py
Random_Programs/Learning/json_parser/: dks_json_exceptions.py
Utilities/: Python_Utilities.py
