[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/card_engine"]

[project]
name = "card_engine"
version = "0.1.0"
description = "A Professional Card Manager With Different Hands And Encryption."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Daivik", email = "dash.daivix.apps@gmail.com" }]
dependencies = [
    "pytest>=9",
    "pytest-rerunfailures >= 16.1",
    "colorama>=0.4.6"

]

[tool.ruff]
select = ["E", "F", "I", "D", "W", "ANN", "B", "RET", "N"]
line-length = 90
exclude = [
    "tests",
    "tests_cardhandler",
    "Python_Utilities.py",
]
ignore = ["D417"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 90

[tool.pytest.ini_options]
addopts = "--doctest-modules -ra --strict-markers --color=yes --durations=3"
testpaths = ["tests", "card_engine"]
pythonpath = ["src"]
markers = [
    "test_card: testing card",
    "test_deck: testing deck",
    "temp1: temp test testing",
    "temp2: temp test testing",
    "testreset: test reset game",
    "test_hand: testing hand",
]
console_output_style = "progress"
